Gray-Space/src/objects/CH_Doctor__c.object
<CustomObject>
    <fields>
        <fullName>CH_City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CH_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_License_number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>License number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp;  Id , CH_First_Name__c &amp; &apos; &apos; &amp; CH_Last_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doctor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Name__c</fullName>
        <formula>CH_First_Name__c &amp; &apos; &apos; &amp; CH_Last_Name__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Nationality__c</fullName>
        <label>Nationality</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Next_Birthday__c</fullName>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CH_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Reset_Birthday_Email_System__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reset Birthday Email System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Speciality__c</fullName>
        <label>Speciality</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Start_of_career__c</fullName>
        <label>Start of career</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Tomorrow_birthday__c</fullName>
        <formula>AND(
 (MONTH( CH_Date_of_Birth__c ) = MONTH( TODAY() )),
 (DAY( CH_Date_of_Birth__c ) = DAY( TODAY() ) + 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tomorrow_birthday</label>
        <type>Checkbox</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CH_Link__c</columns>
        <columns>CH_License_number__c</columns>
        <columns>CH_Speciality__c</columns>
        <columns>CH_City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Doctor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>